--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -18,17 +18,25 @@ html {
 
 body {
   background: beige;
-  color: lighten(black, 10);
+  color: map-get($colors, 'text');
 }
 
 p {
-  & + & {
+  & + * {
     margin-top: 0.5rem;
   }
 }
 
 a {
-  color: darken(blue, 10);
+  color: map-get($colors, 'link');
   text-decoration: none;
-  font-weight: bold;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
 }
