--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -1,23 +1,7 @@
-.header {
-  display: flex;
-  flex-flow: wrap;
-  align-items: center;
-  justify-content: space-between;
+.as-h1 {
+  font-size: 2rem;
 
-  &__title {
-    padding: 0;
-    margin-block-end: 0;
-  }
-
-  &__category-list {
-    display: flex;
-
-    li:not(:first-child) {
-      &::before {
-        content: '|';
-        display: inline-block;
-        margin: 0 0.5rem;
-      }
-    }
+  &--top {
+    margin-top: -0.6rem;
   }
 }
