--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -30,6 +30,11 @@ p {
 a {
   color: map-get($colors, 'link');
   text-decoration: none;
+
+  &:hover,
+  &:active {
+    color: map-get($colors, 'text');
+  }
 }
 
 ul {
