--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -6,7 +6,7 @@
 }
 
 html {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Ubuntu Mono', sans-serif;
   font-size: 16px;
   line-height: 1.45;
   word-spacing: 1px;
