--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -14,17 +14,16 @@ html {
   -webkit-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-
-  &.t-console {
-    background: black;
-  }
 }
 
 body {
   background: map-get($colors, 'background');
   color: map-get($colors, 'text');
+}
 
-  .t-console & {
+html.t-portfolio {
+  &,
+  & body {
     background: black;
     color: white;
   }
